Fixing read more button on mobile

--- a/styles/posts.css
+++ b/styles/posts.css
@@ -203,4 +203,9 @@
   .pagination-button {
     font-size: 36px;
   }
+
+  #read-more {
+    font-size: 20px;
+    width: 100px;
+  }
 }
